packages/django_hstore_widget/src/frontend/css/app.css
django-hstore-widget {
    button {
        all: unset;
    }

    /* Arbitrary min-width */
    .min-width-\[150px\] {
        min-width: 150px;
    }

    .min-width-\[300px\] {
        min-width: 300px;
    }

    /* Display types */
    .flex {
        display: flex;
    }

    .hidden {
        display: none;
    }

    /* User Select */
    .select-none {
        user-select: none;
    }

    /* Justify Items */
    .justify-center {
        justify-content: center;
    }

    .justify-start {
        justify-content: flex-start;
    }

    .justify-between {
        justify-content: space-between;
    }

    /* Align items */
    .items-center {
        align-items: center;
    }

    /* Flex Direction */
    .flex-col {
        flex-direction: column;
    }

    /* Visibility */
    .invisible {
        visibility: hidden;
    }

    /* Gaps */
    .gap-1 {
        gap: 0.25rem; /* 4px */
    }

    .gap-2\.5 {
        gap: 0.625rem;
        /* 10px */
    }

    /* Opacity */
    .opacity-60 {
        opacity: 0.6;
    }

    /* Cursor types */
    .cursor-pointer {
        cursor: pointer;
    }

    .cursor-default {
        cursor: default;
    }

    /* Brightness */
    .brightness-90 {
        filter: brightness(0.9);
    }

    /* Icon size */
    .w-4 { width: 1rem; }
    .h-4 { height: 1rem; }

    /* Colors */
    .warning {
        color: var(--error-fg, red);
        border-color: var(--error-fg, red);
    }
}

